force-app/main/default/objects/Scenario_Model_Input_Period__c.object
<CustomObject>
    <description>Calculates baseline vs scenario emissions numbers for each year covered by the parent Scenario Model Input record.</description>
    <fields>
        <fullName>Abatement_Cost_per_tCO2e_Saved__c</fullName>
        <formula>Scenario_Model_Input__r.Abatement_Cost_per_tCO2e_Saved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Abatement Cost per tCO2e Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ESG_Initiative__c</fullName>
        <formula>Scenario_Model_Input__r.ESG_Initiative__r.Name</formula>
        <label>ESG Initiative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Year__c</fullName>
        <label>Period Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Scenario_Planner_Years</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Model_Input_Name__c</fullName>
        <formula>Scenario_Model_Input__r.Name</formula>
        <label>Scenario Model Input Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_Model_Input__c</fullName>
        <label>Scenario Model Input</label>
        <referenceTo>Scenario_Model_Input__c</referenceTo>
        <relationshipLabel>Scenario Model Input Periods</relationshipLabel>
        <relationshipName>Scenario_Model_Input_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scenario_Model__c</fullName>
        <formula>Scenario_Model_Input__r.Scenario_Model__r.Name</formula>
        <label>Scenario Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_1_Baseline_Emissions__c</fullName>
        <label>Scope 1 Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_1_Scenario_Emissions__c</fullName>
        <label>Scope 1 Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_2_LB_Baseline_Emissions__c</fullName>
        <label>Scope 2 LB Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_2_LB_Scenario_Emissions__c</fullName>
        <label>Scope 2 LB Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_2_MB_Baseline_Emissions__c</fullName>
        <label>Scope 2 MB Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_2_MB_Scenario_Emissions__c</fullName>
        <label>Scope 2 MB Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_3_Baseline_Emissions__c</fullName>
        <label>Scope 3 Baseline Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope_3_Scenario_Emissions__c</fullName>
        <label>Scope 3 Scenario Emissions</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Baseline_Emissions_tCO2e__c</fullName>
        <formula>Scope_1_Baseline_Emissions__c + Scope_2_MB_Baseline_Emissions__c + Scope_3_Baseline_Emissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Baseline Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_Savings__c</fullName>
        <formula>Total_Scenario_Emissions_Savings_tCO2e__c / Total_Baseline_Emissions_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions Savings (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_Savings_tCO2e__c</fullName>
        <formula>Total_Baseline_Emissions_tCO2e__c - Total_Scenario_Emissions_tCO2e__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions Savings (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scenario_Emissions_tCO2e__c</fullName>
        <formula>Scope_1_Scenario_Emissions__c + Scope_2_MB_Scenario_Emissions__c + Scope_3_Scenario_Emissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Scenario Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Scenario Model Input Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Abatement_Cost_per_tCO2e_Saved__c</columns>
        <columns>Scenario_Model_Input__c</columns>
        <columns>Total_Baseline_Emissions_tCO2e__c</columns>
        <columns>Total_Scenario_Emissions_tCO2e__c</columns>
        <columns>Total_Scenario_Emissions_Savings__c</columns>
        <columns>Total_Scenario_Emissions_Savings_tCO2e__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scenario_Model_Input_Name__c</field>
            <operation>contains</operation>
            <value>energy effic</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SMIP-{0000000}</displayFormat>
        <label>Scenario Model Input Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scenario Model Input Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>